Shift modal to use position: fixed so it cant fly away when scrolling. Left some stuff commented out in case we need to revert this.

--- a/css/views-admin.css
+++ b/css/views-admin.css
@@ -214,6 +214,7 @@
 .views-ui-dialog {
   /* We need this so the button is visible. */
   overflow: visible;
+  position: fixed;
 }
 
 .views-ui-dialog .ui-dialog-titlebar-close {
